force-app/main/default/objects/ht_Carrier__c/ht_Carrier__c.object-meta.xml
<CustomObject>
    <label>NIPR Carrier</label>
    <nameField>
        <label>Carrier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NIPR Carriers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>