force-app/main/default/objects/ht_Carrier__c/fields/ht_CoCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_CoCode__c</fullName>
    <externalId>true</externalId>
    <label>CoCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>