force-app/main/default/objects/ht_Carrier__c/fields/ht_FullName__c.field-meta.xml
<CustomField>
    <fullName>ht_FullName__c</fullName>
    <label>Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>