force-app/main/default/objects/ht_Carrier__c/fields/ht_UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ht_UniqueIdentifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Represents concatenation of CoCode and FEIN for easier upserting to Salesforce, because some Carriers might have one or the other</description>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>