force-app/main/default/objects/ht_Carrier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ht_FullName__c</columns>
    <columns>ht_CoCode__c</columns>
    <columns>ht_FEIN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>